Live Data/mdapipkg/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_Office_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head Office Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Sector</valueSetName>
        </valueSet>
    </fields>
</CustomObject>